<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabTextColor="@color/colorPrimary"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_world" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_business" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_politics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sports" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_technology" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_science" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>